# hermes-dashscope-image-gen

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
hermes_dashscope_image_gen/: __init__.py  plugin.yaml
